# mini-kv

./: .gitignore  Cargo.toml  readme.md  test_result.txt
benches/: engine_bench.rs
doc/: api.md  design.md
rpc/: Cargo.toml  minikv.proto
rpc/src/: lib.rs  minikv.rs  minikv_grpc.rs
src/: client.rs  common.rs  error.rs  lib.rs  storage.rs
src/client/: main.rs
src/kvstore/: log_entry.rs  lsm_tree.rs  mod.rs  storage.rs
src/server/: kv_server.rs  main.rs  mod.rs
src/server/storage/: mod.rs  sled.rs
src/server/storage/lsm_tree/: mod.rs
src/server/store/: mem_store.rs  mod.rs  redo_log.rs
src/shared/: bytes.rs  mod.rs
src/test/: benchmark.rs  mod.rs  test_case.txt
tests/: kv_store.rs  tests.rs
