[package]
name = "kvs"
version = "0.1.0"
authors = ["longfangsong <longfangsong@icloud.com>"]
description = "A key-value store"
edition = "2018"

[dependencies]
clap = "2.33.0"
bincode = "1.2.1"
serde = {version="1.0.106", features=["derive"]}
structopt = "0.3.14"
log = "0.4.8"
env_logger = "0.7.1"
sled = "0.31.0"
failure = "0.1.8"

[dev-dependencies]
assert_cmd = "1.0.1"
predicates = "1.0.4"
tempfile = "3.1.0"
walkdir = "2.3.1"
criterion = "0.3.2"
rand = "0.7.3"

[[bench]]
name = "engine_bench"
harness = false
